--- a/personal-portfolio/package.json
+++ b/personal-portfolio/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://trishaolorvida.github.io/personal-portfolio/",
   "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
